bug fixed update 2.0

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
 </head>
+
 <body id="page">
   <header class="header">
     <div class="container header__container">
@@ -83,8 +84,14 @@
               </th>
             </thead>
             <tbody class="hero__tbody" id="hero__tbody">
+
             </tbody>
           </table>
+          <div class="hero__loader">
+            <div class="hero__loader--rotate">
+              <div></div>
+            </div>
+          </div>
         </div>
         <button class="btn hero__btn" id="hero__btn">
           <svg class="hero__svg" width="23" height="16" viewBox="0 0 23 16" xmlns="http://www.w3.org/2000/svg">
